<resources>
    <string name="app_name">Tiny Files</string>
    <string name="storage_internal">Internal storage</string>
    <string name="storage_sd_card">SD Card</string>
    <string name="root_directory">Root</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="library_recents">Recents</string>
    <string name="library_images"><![CDATA[Images & Photos]]></string>
    <string name="library_video">Video</string>
    <string name="library_audio">Audio</string>
    <string name="library_documents">Documents</string>
    <string name="library_apps">Apps</string>
    <string name="library_archives">Archives</string>
    <string name="storage">Storage</string>
    <string name="library">Library</string>
    <string name="menu_list">Show as list</string>
    <string name="menu_grid">Show as grid</string>
    <string name="menu_sort">Sort type</string>
    <string name="sort_dialog__title">Sort by</string>
    <string name="sort_dialog__ascending">Ascending</string>
    <string name="sort_dialog__descending">Descending</string>
    <string name="sort_dialog__sort_name">File name</string>
    <string name="sort_dialog__sort_size">Size of the file</string>
    <string name="sort_dialog__sort_date">Modification date</string>
    <string name="exit_app_prompt">Press back one more time to exit</string>
    <string name="x_items">%d items</string>

    <plurals name="folder_size">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
</resources>
